--- a/Website/bootstrap/main.css
+++ b/Website/bootstrap/main.css
@@ -53,7 +53,9 @@ a {
   font-size: 0.6em;
 }
 .links{
-  font-size: 0.6em;
+  font-size: 0.5em;
+  text-align: left;
+
 }
 .links a{
   color: grey;
