--- a/Website/bootstrap/main.css
+++ b/Website/bootstrap/main.css
@@ -1,6 +1,6 @@
 
 header {
-  background: url("images/blockchain1.png");
+  background: url("images/blockchain.png");
   background-size: cover;
 }
 .top_nav {
@@ -25,6 +25,10 @@ li {
 p{
   font-size: 0.6em;
   text-align: justify;
+}
+
+.links_text{
+  text-align: left;
 }
 
 h1{
@@ -59,4 +63,30 @@ a {
 }
 .links a{
   color: grey;
+}
+
+a:hover {
+  color: #007777;
+}
+
+img{
+  color: white;
+  border: 10px solid;
+  border-radius: 20px;
+}
+
+.icon:hover {
+	background-color: #007777;
+  border-radius: 12px;
+}
+
+.input_form{
+  border-radius: 6px;
+  text-align: center;
+}
+
+button{
+  border-radius: 6px;
+  color: grey;
+  font-size: 1.1em;
 }
